--- a/PFE/latex/dedication.tex
+++ b/PFE/latex/dedication.tex
@@ -3,15 +3,12 @@
 \thispagestyle{empty}
 
 \let\clearpage\relax
-% New margins for rest of document
 \newgeometry{left=2.4cm,right=1.7cm,top=1cm,bottom=1cm,nohead}
 
 \begin{center}
     \textit{\fontsize{34}{46}{\bfseries{\color{Black}{Dedication}}}}
     \\
     \vspace{0.2in}
-    %\color{Red}{\large\textbf{{\lipsum[1-2]}}}
-    % Taleb Zineb
     \itshape
     \Large{\underline{I dedicate this work to:}}\\          \textbf{\large{To my dear mother Fatma,}}\\\vspace{-0.1in}
     \textbf{\large{And to my dear father Khelifa,}}\\
@@ -20,7 +17,7 @@
     \large{For her advices throughout my journey.}\\
     \textbf{\large{To all my dear friends and my partner Aghiles,}}\\
     \large{For their help and support.}\\
-    \textbf{\large{To my professor Touazi and Yagoubi..}}\\
+    \textbf{\large{To my professor Touazi and Yagoubi.}}\\
     \large{For providing all their help needed.}\\
     \hfill\textbf{\Large{Neggazi Mohamed Lamine}}
 
