fixed chapter 3 figures!

--- a/PFE/latex/chap3.tex
+++ b/PFE/latex/chap3.tex
@@ -30,7 +30,7 @@ The ALL-IDB1 can be used for segmentation or classification with image processin
 
 \begin{figure}[H]
 \centering
-\includegraphics[width = 5in, height = 3in]{../images/ALLIDB1.jpg}
+\includegraphics[width = 4.6in]{../images/ALLIDB1.jpg}
 \caption{Examples of the images contained in ALL-IDB1: healthy cells from non-ALL patients (a,b,c), probable lymphoblasts from ALL patients (d,e,f). }
 \end{figure}
 
@@ -75,7 +75,7 @@ If we plot the coordinates in the Img006\_1.xyc (figure \ref{fig:Im006.jpg}) fil
 
 \begin{figure}[H]
 \centering
-    \fbox{\includegraphics[width = 5in, height = 4in]{../images/img006.xyc.jpg}}
+    \fbox{\includegraphics[width = 5in]{../images/img006.xyc.jpg}}
 \caption{coordinates from Img006\_1.xyc ploted on Img006\_1.jpg}
 \label{fig:Im006.xyc.jpg}
 \end{figure}
@@ -108,7 +108,7 @@ In this case, the ground truth consists of the number of cells (or other objects
 \begin{figure}[H]
 \begin{minipage}[c]{\linewidth}
 \centering
-\includegraphics[width = 2.5in, height = 1.8in]{../images/AS_09125_050118150001_A03f05d0.jpg}
+\includegraphics[width = 1.9in]{../images/AS_09125_050118150001_A03f05d0.jpg}
 \subcaption{AS\_09125\_050118150001\_A03f05d0.jpg}
 \label{fig:BBBC1}
 \end{minipage}
@@ -248,7 +248,7 @@ In this project, the Faster R-CNN algorithm from keras-frcnn for Object Detectio
 
 \begin{figure}[H]
 \centering
-    \fbox{\includegraphics[width = 4.2in, height = 3.5in]{../images/BBCD1.jpg}}
+    \fbox{\includegraphics[width = 4.2in]{../images/BBCD1.jpg}}
 \caption{Sample data from BBCD}
 \label{fig:BBCD1}
 \end{figure}
