fixed chapter4 figures!

--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -27,7 +27,7 @@ It is the science and engineering of making intelligent machines, especially int
 \begin{figure}[h]
 \centering
   \vspace{-0.1in}
-    \centerline{\includegraphics[width = 4in, height = 2.2in]{../images/artificial-intelligence.png}}
+    \centerline{\includegraphics[width = 4in]{../images/artificial-intelligence.png}}
     \caption{Artificial Intelligence}
 \end{figure}
 
@@ -187,7 +187,7 @@ In this section we are going to present some CNN architectures, CNN architecture
 \begin{figure}[h]
     \centering
       \vspace{-0.1in}
-        \centerline{\includegraphics[width = 6in, height = 2.2in]{../images/timeline-of-segmentation-algorithms.png}}
+        \centerline{\includegraphics[width = 6in]{../images/timeline-of-segmentation-algorithms.png}}
         \caption{Timeline of segmentation algorithms}
     \end{figure}
 
@@ -231,7 +231,7 @@ There are a few convolution layers followed by a pooling layer that reduces the 
 
 \begin{figure}[h]
 \centering
-    \centerline{\includegraphics[width = 4.2in, height = 2.4in]{../images/VGG16-architecture.png}}
+    \centerline{\includegraphics[width = 4in]{../images/VGG16-architecture.png}}
     \caption{VGG16 architecture}
 \end{figure}
 
@@ -260,7 +260,7 @@ SegNet is a semantic segmentation model designed in 2017. This core trainable se
 \begin{figure}[h]
 \centering
   \vspace{-0.1in}
-    \centerline{\includegraphics[width = 4in, height = 2.2in]{../images/segnet.png}}
+    \centerline{\includegraphics[width = 4in]{../images/segnet.png}}
     \caption{SegNet architecture}
 \end{figure}
 
@@ -274,13 +274,13 @@ In watershed segmentation an image is regarded as a topographic landscape with r
 \centering
 \begin{minipage}{.33\textwidth}
   \centering
-  \centerline{\includegraphics[width = 3in, height = 1.8in]{../images/watershed_example.jpg}}
+  \centerline{\includegraphics[width = 2in]{../images/watershed_example.jpg}}
     \subcaption{example Image}
 \end{minipage}
 
 \begin{minipage}{.33\textwidth}
   \centering
-  \centerline{\includegraphics[width = 3in, height = 1.8in]{../images/watershed_relief.png}}
+  \centerline{\includegraphics[width = 2in]{../images/watershed_relief.png}}
     \subcaption{watershed reliefs}
 \end{minipage}
   \caption{Watershed algorithm from \textsuperscript{\cite{Steve_Eddins_2022_mathworks}}}
@@ -307,6 +307,7 @@ A great example of connected component Labeling is that we are using this algori
   \centerline{\includegraphics[width = 4in]{../images/Im0001_1_connected_compounent_labeling.jpg}}
     \subcaption{result image}
 \end{minipage}
+  \label{fig:connected_component_labeling}
   \caption{Example of connected component labeling}
 \end{figure}
 
@@ -323,7 +324,7 @@ the equation for the discrete cosine transform is represented as:
 
 \begin{figure}[H]
 \centering
-    \centerline{\includegraphics[width = 4.6in, height = 4.2in]{../images/inverse-DCT-of-trees.png}}
+    \centerline{\includegraphics[width = 5.2in]{../images/inverse-DCT-of-trees.png}}
     \caption{Inverse DCT of Trees; (a) DCT(100\%); (b) DCT(75\%); (c) DCT(50\%); (d) DCT(25\%).}
 \end{figure}
 
