edited ccl and merged with overleaf

--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -296,21 +296,10 @@ A great example of connected component Labeling is that we are using this algori
 
 \begin{figure}[H]
 \centering
-\begin{minipage}{\textwidth}
-  \centering
-  \centerline{\includegraphics[width = 4in]{../images/Im0001_1_substraction.jpg}}
-    \subcaption{example Image}
-\end{minipage}
-
-\begin{minipage}{\textwidth}
-  \centering
-  \centerline{\includegraphics[width = 4in]{../images/Im0001_1_connected_compounent_labeling.jpg}}
-    \subcaption{result image}
-\end{minipage}
-  \label{fig:connected_component_labeling}
-  \caption{Example of connected component labeling}
+    \centerline{\includegraphics[width = 4.6in]{../images/object-counting-using-connected.png}}
+    \caption{Object counting using Connected Component Labeling (CCL).}
+    \label{fig:connected_component_labeling}
 \end{figure}
-
 
 \subsection{Discrete cosine transform}
 \hspace{\parindent}
