added introducion and conclusion to chap 2 3*

--- a/PFE/latex/chap3.tex
+++ b/PFE/latex/chap3.tex
@@ -14,7 +14,7 @@
 
 \section{Introduction}
 \hspace{\parindent}
-
+In this chapter we will try to find the best dataset that will help us with our problem, by performing a comparison between all the available datasets and their annotations, we can see that there is a lot of datasets which are created to attack a specific sets of problems, we can see below all available datasets:
 
 \section{ALL-IDB}
 \hspace{\parindent}
@@ -253,7 +253,7 @@ In this project, the Faster R-CNN algorithm from keras-frcnn for Object Detectio
 \label{fig:BBCD1}
 \end{figure}
 
-In this database they use bounding boxes to locate the cells and each bounding box has the type of cell RBC or WBC and platlets. they are using the VOC format as a database architecture.
+In this database they use bounding boxes to locate the cells and each bounding box has the type of cell RBC or WBC and Platelets. they are using the VOC format as a database architecture.
 
 \section{Dataset resume}
 \hspace{\parindent}
@@ -262,5 +262,6 @@ In this database they use bounding boxes to locate the cells and each bounding b
 
 \section{Conclusion}
 \hspace{\parindent}
+In this chapter we explored all the available datasets and their annotations which can help us in our problem, we decided to work with the updated ALL-IDB1 dataset which has 13 RBC edges and masks, 108 WBC, Platelets Masks and 13 RBC images which has the count information where we had to use manual count and algorithms to find the count information from the WBC and Platelets images.
 
 \newpage
