--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -118,7 +118,7 @@ The augmentation we used was custom which involves the following steps:
 \centering
   \vspace{-0.1in}
     \centerline{\includegraphics[width = 7in]{../images/Diag_WBC_PLT_UNET_SegNet.png}}
-    \caption{Schema of the segmentation and counting steps of the WBC's and platlets}
+    \caption{Schema of the segmentation and counting steps of the WBC's and Platelets}
     \label{fig:scheme_WBC_PLT}
 \end{figure}
 
