--- a/PFE/latex/tables/PLT_DOUnet.tex
+++ b/PFE/latex/tables/PLT_DOUnet.tex
@@ -23,6 +23,6 @@ Im068\_0 & 9 & 9  & 100.0 \\
 \textbf{Total} &  &  & 98.58\\
 \hline
 \end{tabular}
-\caption{Platlets Counting results with Connected Component Labeling Algorithm}
+\caption{Platelets Counting results with Connected Component Labeling Algorithm}
 \label{table:PLT_UNET_RESULT}
 \end{table}
