--- a/PFE/latex/tables/PLT_UNET_Train.tex
+++ b/PFE/latex/tables/PLT_UNET_Train.tex
@@ -7,6 +7,6 @@
 UNet       & 50 & 0.0156 & 0.1995   & 0.5085 & 0.5431  & 0.9946    \\
 \hline
 \end{tabular}
-\caption{Platlets Model Performance}
+\caption{Platelets Model Performance}
 \label{table:PLT_DOUNET_TRAIN}
 \end{table}
