updated segnet tables!

--- a/PFE/latex/tables/rbc_segnet.tex
+++ b/PFE/latex/tables/rbc_segnet.tex
@@ -16,7 +16,7 @@
  Im095\_0 & 150 & 177 & 177 & 170 & 82.0 & 82.0 & 86.67 \\ 
  Im099\_0 & 528 & 516 & 437 & 465 & 97.73 & 82.77 & 88.07 \\ 
  Im108\_0 & 510 & 528 & 418 & 458 & 96.47 & 81.96 & 89.8 \\ \hline
- Total & -1 & -1 & -1 & -1 & 94.03 & 76.49 & 84.64 \\ 
+ Total &  &  &  &  & 94.03 & 76.49 & 84.64 \\ 
 
 \hline
 \end{tabular}
