--- a/PFE/latex/tables/plt_segnet.tex
+++ b/PFE/latex/tables/plt_segnet.tex
@@ -16,7 +16,7 @@
  Im095\_0 & 7 & 6 & 6 & 6 & 85.71 & 85.71 & 85.71 \\ 
  Im099\_0 & 37 & 26 & 26 & 26 & 70.27 & 70.27 & 70.27 \\ 
  Im108\_0 & 5 & 6 & 7 & 6 & 80.0 & 60.0 & 80.0 \\ \hline
- Total & -1 & -1 & -1 & -1 & 65.65 & 71.56 & 65.65 \\ 
+ Total &  &  &  &  & 65.65 & 71.56 & 65.65 \\ 
 
 \hline
 \end{tabular}
