--- a/PFE/latex/introduction.tex
+++ b/PFE/latex/introduction.tex
@@ -16,7 +16,7 @@
 
 Blood carries out many vital functions as it circulates through the body. It transports oxygen from the lungs to other body tissues and carries away carbon dioxide. It carries nutrients from the digestive system to the cells of the body, and carries away wastes for excretion by the kidneys. Blood helps our body fight off infectious agents and inactivates toxins, stops bleeding through its clotting ability, and regulates our body temperature. Doctors rely on many blood tests to diagnose and monitor diseases. Some tests measure the components of blood itself; others examine substances found in the blood to identify abnormal functioning of various organs. Hence, we here propose a software system which will assist pathologists to detect blood cell count and help to find out the diseases. This information can be very helpful to a physician who, for example, is trying to identify the cause of a patient's diseases.
 
-Earlier hematologists were performing microscopic Copied selected text to selection primary: examination and counting of blood cells manually, which  was very time-consuming and tedious process. Also, the accuracy of counting mainly depends on their expertise skill and their physical conditions, and because of cells complex nature, it still remains a challenging task to segment cells from its background and count them automatically.
+Earlier hematologists were performing microscopic examination and counting of blood cells manually, which was very time-consuming and tedious process. Also, the accuracy of counting mainly depends on their expertise skill and their physical conditions, and because of cells complex nature, it still remains a challenging task to segment cells from its background and count them automatically.
 
 Our work is to automate the task of cell counting, we will  try to find the best solution to preform the complete blood count (CBC), The solution is devided on two parts.
 The first part is the segmentation where we need to segment the image to remove the noise and get a clear mask on which we are going preform the counting.In this phase we are comparing between two convolutional neural networks U-Net and SegNet.
