--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -151,7 +151,7 @@ Here are the results of the 13 images:
 \subsection{Platelets}
 \hspace{\parindent}
 The platelets segmentation result we achieved is not the best compared to the do-U-Net model. Segnet extracts the platelets but with some noise which made it very hard to count accurately.
-It achieved a segmetation accuracy of 99.89\% and the highest counting accuracy is 71.56\% which is not very good.\\
+It achieved a segmetation accuracy of xx.xx\% and the highest counting accuracy is 71.56\% which is not very good.\\
 Here are all the counting accuracies for each approach:
 
 \input{tables/plt_segnet.tex}
