--- a/PFE/latex/introduction.tex
+++ b/PFE/latex/introduction.tex
@@ -22,10 +22,10 @@ Our work is to automate the task of cell counting, we will  try to find the best
 The first part is the segmentation where we need to segment the image to remove the noise and get a clear mask on which we are going preform the counting.In this phase we are comparing between two convolutional neural networks U-Net and SegNet.
 The second part is the counting phase in which we will take  the output mask from the first phase and apply counting algorimths on it. We used 3 algorithms to count the cells Watershed, Connected Component Labeling, Circle Hough transform.\
 This thesis is presented in four chapters:\\
-In the first chapter we present the medical background of blood cells and the importance of the complete blood count.\\
-In the second chapter \textbf{STATE OF THE ART} we studied the diversity of state of the art methods and we preformed a comparative study.\\
-In the third chapter \textbf{DATASET COLLECTION} we explored all the available datasets and their annotation.\\
-In the fourth chapter \textbf{ARTIFICIAL INTELLIGENCE} we presented artificial intelligence with all of its branches and some image processing methods.\\
-In the fifth chapter \textbf{METHODOLOGY} we present the method we used for segmentation and counting.\\
-In the last chapter \textbf{EXPERIMENTS AND RESULTS} we present the results of the experiments that we performed.
+In the first chapter \textbf{Blood Cells}we present the medical background of blood cells and the importance of the complete blood count.\\
+In the second chapter \textbf{State Of The Art} we studied the diversity of state of the art methods and we preformed a comparative study.\\
+In the third chapter \textbf{Dataset Collection} we explored all the available datasets and their annotation.\\
+In the fourth chapter \textbf{Artificial Intelligence} we presented artificial intelligence with all of its branches and some image processing methods.\\
+In the fifth chapter \textbf{Methodology} we present the method we used for segmentation and counting.\\
+In the last chapter \textbf{Experiments And Results} we present the results of the experiments that we performed.
 
