added result cht output!

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -160,6 +160,24 @@ Here are all the counting accuracies for each approach:
 \vspace{0.2in}
 \hspace{\parindent}
 
+\begin{figure}[h]
+\centering
+\begin{minipage}{.33\textwidth}
+  \centering
+  \fbox{\includegraphics[width = 2.2in]{../images/originalCHT.jpg}}
+\end{minipage}%
+\begin{minipage}{.33\textwidth}
+  \centering
+  \fbox{\includegraphics[width = 2.2in]{../images/edgeCHT.jpg}}
+\end{minipage}
+\begin{minipage}{.33\textwidth}
+  \centering
+  \fbox{\includegraphics[width = 2.2in]{../images/cht.png}}
+\end{minipage}
+  \caption{Circle Hough Transform applied to count red blood cells}
+\end{figure}
+
+
 \section{Conclusion}
 
 \newpage
