added watershed result demo

--- a/PFE/latex/conclusion.tex
+++ b/PFE/latex/conclusion.tex
@@ -14,3 +14,8 @@
 \hspace*{0.16in}
 \end{changemargin}
 
+In the present work, we have mainly presented two different models of segmentation based on CNNs and three counting algorithms to perform a complete blood count.
+We focused more on the segmentation task where  we tested two models U-Net and SegNet to get better masks. we can see that the U-Net gave better result with less noisy mask, but the two models has some weaknesses with the images color space.
+In the counting task, we had a small time window where we couldn't tune the 3 three algorithm parameters to get the best results. but we got acceptable results in each blood cell type, especially with platelets.\\
+
+In the future, it would be interesting to develop a system which makes it possible to classify each blood cell depending on the shape and size and color to detect even more sophisticated abnormalities more accurate than the complete blood count.
