added cht image results!

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -162,17 +162,15 @@ Here are all the counting accuracies for each approach:
 
 \begin{figure}[h]
 \centering
-\begin{minipage}{.33\textwidth}
+\begin{minipage}{.5\textwidth}
   \centering
-  \fbox{\includegraphics[width = 2.2in]{../images/originalCHT.jpg}}
+  \fbox{\includegraphics[width = 2.8in]{../images/originalCHT.jpg}}
+  \subcaption{Original image}
 \end{minipage}%
-\begin{minipage}{.33\textwidth}
+\begin{minipage}{.5\textwidth}
   \centering
-  \fbox{\includegraphics[width = 2.2in]{../images/edgeCHT.jpg}}
-\end{minipage}
-\begin{minipage}{.33\textwidth}
-  \centering
-  \fbox{\includegraphics[width = 2.2in]{../images/cht.png}}
+  \fbox{\includegraphics[width = 2.8in]{../images/cht.png}}
+  \subcaption{Output CHT image}
 \end{minipage}
   \caption{Circle Hough Transform applied to count red blood cells}
 \end{figure}
