added watershed results!

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -160,7 +160,7 @@ Here are all the counting accuracies for each approach:
 \vspace{0.2in}
 \hspace{\parindent}
 
-\begin{figure}[h]
+\begin{figure}[H]
 \centering
 \begin{minipage}{.5\textwidth}
   \centering
@@ -169,12 +169,26 @@ Here are all the counting accuracies for each approach:
 \end{minipage}%
 \begin{minipage}{.5\textwidth}
   \centering
-  \fbox{\includegraphics[width = 2.8in]{../images/cht.png}}
+  \fbox{\includegraphics[width = 3.2in]{../images/cht.png}}
   \subcaption{Output CHT image}
 \end{minipage}
   \caption{Circle Hough Transform applied to count red blood cells}
 \end{figure}
 
+\begin{figure}[H]
+\centering
+\begin{minipage}{.5\textwidth}
+  \centering
+  \fbox{\includegraphics[width = 2.8in]{../images/originalWatershed.jpg}}
+  \subcaption{Original image}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+  \centering
+  \fbox{\includegraphics[width = 2.8in]{../images/watershed_color.jpg}}
+  \subcaption{Output CHT image}
+\end{minipage}
+  \caption{Watershed applied to count white blood cells}
+\end{figure}
 
 \section{Conclusion}
 
