added chapter 6 conclusion!

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -191,5 +191,7 @@ Here are all the counting accuracies for each approach:
 \end{figure}
 
 \section{Conclusion}
+In conclusion, both models performed very well detecting and counting the blood cells, each one with its advantages and disadvateges.
+But the do-UNet model outperformed SegNet because of the noise generating using segnet.
 
 \newpage
