added results watershed, ccl and cht.

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -185,9 +185,24 @@ Here are all the counting accuracies for each approach:
 \begin{minipage}{.5\textwidth}
   \centering
   \fbox{\includegraphics[width = 2.8in]{../images/watershed_color.jpg}}
-  \subcaption{Output CHT image}
+  \subcaption{Output Watershed image}
 \end{minipage}
   \caption{Watershed applied to count white blood cells}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\begin{minipage}{.5\textwidth}
+  \centering
+  \fbox{\includegraphics[width = 2.8in]{../images/originalCCL.jpg}}
+  \subcaption{Original image}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+  \centering
+  \fbox{\includegraphics[width = 2.8in]{../images/ccl.png}}
+  \subcaption{Output CCL image}
+\end{minipage}
+  \caption{Connected Component Labeling applied to count white blood cells}
 \end{figure}
 
 \section{Conclusion}
